--- a/text.html
+++ b/text.html
@@ -15,7 +15,7 @@
         font-family: Arial, sans-serif;
     }
 body {
-    background-image: url('https://drive.google.com/uc?id=1-nny4TFW6DDsGMvBz7-AVID2qMz-9Bdt');
+    background-image: url('5.jpg');
     background-size: cover; /* This ensures the background image covers the entire screen */
 }
     
