--- a/afsanarahman.html
+++ b/afsanarahman.html
@@ -15,7 +15,7 @@
         font-family: Arial, sans-serif;
     }
 body {
-    background-image: url('bg/1264.jpg');
+    background-image: url('1264.jpg');
     background-size: cover; /* This ensures the background image covers the entire screen */
 }
     
