--- a/user/monir&mim.html
+++ b/user/monir&mim.html
@@ -199,7 +199,7 @@ margin-left: 10px;
     <div class="relation-container">
       <div class="textline-container">
         <div class="line"></div>
-        <div class="line-text">In a Relationship</div>
+        <div class="line-text">Got Married</div>
         <div class="line"></div>
       </div>
     </div>
