--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <button>Download</button>
         </a>
         <div class="contact-info">
-            <p>Created by Shahin Kadir</p>
+            <p>Created by COUNT UP MEMORIES</p>
             <a href="https://www.facebook.com/shahinkadirofficial" target="_blank">Facebook</a>
             <p><a href="tel:+8801787095001">Phone: +8801787095001</a></p>
         </div>
